Bug 1835426 - Add some padding to devtools-tooltip-events-container when overlay scrollbars are present r=nchevobbe,devtools-reviewers
This makes it harder for the user to accidentally expand the overlay scrollbar
when they actually intended to toggle an event listener on or off.

Differential Revision: https://phabricator.services.mozilla.com/D179279

UltraBlame original commit: c8f3b08a76eca8f803d8d498c3ca93004cac9e42

--- a/devtools/client/themes/tooltips.css
+++ b/devtools/client/themes/tooltips.css
@@ -4802,6 +4802,45 @@ y
 auto
 ;
 }
+media
+(
+-
+moz
+-
+overlay
+-
+scrollbars
+)
+{
+.
+devtools
+-
+tooltip
+-
+events
+-
+container
+{
+padding
+-
+inline
+:
+calc
+(
+env
+(
+scrollbar
+-
+inline
+-
+size
+)
+/
+2
+)
+;
+}
+}
 .
 devtools
 -
